2005-06-28  Mark McLoughlin  <mark@skynet.ie>

	Re-name the Edutainment sub-menu to Education.
	Bug #307979

	* layout/applications.menu: s/Edutainment/Education/

	* desktop-directories/Edutainment.directory.in:
	Re-name from Edutainmenut.directory.in and change
	the name.
	
	* desktop-directories/Makefile.am: upd.
	
2005-06-11  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "he" to ALL_LINGUAS.

2005-06-08  Mark McLoughlin  <mark@skynet.ie>

	Patch from Brian Cameron <brian.cameron@sun.com> in
	bug #304129

	* libmenu/libgnome-menu-uninstalled.pc.in: add pkg-config
	file to support building against an uninstalled 
	libgnome-menu.
	
	* configure.in: create libgnome-menu-uninstalled.pc
	
	* libmenu/Makefile.am: add uninstalled.pc to EXTRA_DIST

2005-06-05  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* configure.in: Added 'gl' to ALL_LINGUA.

2005-05-30  Swapnil Hajare  <dreamil@gmail.com>

	* configure.in: Added entry fir Marathi (mr) in ALL_LINGUA

2005-05-30  Mark McLoughlin  <mark@skynet.ie>

	Fix problem where menus and items mentioned in a <Layout>
	after a <Merge type="menus"> or <Merge type="files">
	Bug #305723

	* libmenu/gmenu-tree.c: 
	(find_name_in_list): helper function.
	(merge_subdirs), (merge_entries),
	(merge_subdirs_and_entries): accept lists of menus or files
	which appear after the merge and don't merge them.
	(get_subdirs_from_layout_info),
	(get_entries_from_layout_info): get a list of the menus or
	files specified after a merge.
	(process_layout_info): pass the exception lists to the
	merge operations.

2005-05-22  Dennis Cranston  <dennis_cranston@yahoo.com>

	* simple-editor/gmenu-simple-editor.glade:  HIGify
	the widget spacing and shadow type.
	
	* simple-editor/GMenuSimpleEditor/maindialog.py:  
	"Hide" -> "Show".
	
2005-05-18  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.11.1.1

==================== 2.11.1.1 ====================

2005-05-18  Mark McLoughlin  <mark@skynet.ie>
